final commit of coursework portion

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "86c641ef",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2740eace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully loaded 5 files from xfer, 27 files from rec, 27 files from projected, and supplemental data\n"
+     ]
+    }
+   ],
    "source": [
     "# SETUP\n",
     "\n",
@@ -1473,139 +1482,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d2ce7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.read_graphml(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\\transfer_portal_2022_cleaned.graphml\")\n",
-    "for node in G:\n",
-    "    # Create a list of (node, degree) tuples\n",
-    "    degree_list = list(G.degree())\n",
-    "\n",
-    "    # Sort the list by degree (value at index 1) in descending order\n",
-    "    degree_list.sort(key=lambda x: x[1], reverse=True)\n",
-    "\n",
-    "    # Print the top 20\n",
-    "    print(f\"{'Rank':<5} {'School':<30} {'Degree'}\")\n",
-    "    print(\"-\" * 45)\n",
-    "\n",
-    "    for i, (school, degree) in enumerate(degree_list[:20], 1):\n",
-    "        print(f\"{i:<5} {school:<30} {degree}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d7560d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# COMMUNITIES\n",
-    "\n",
-    "# --- 1. CONFIGURATION ---\n",
-    "years = range(2002, 2027)\n",
-    "stability_threshold = 0.35  # Schools must be in same community _% of the time to keep link\n",
-    "label_threshold_percentile = 0  # Only label top _% of nodes by degree to reduce clutter\n",
-    "\n",
-    "# Initialize Consensus Graph\n",
-    "consensus_G = nx.Graph()\n",
-    "graphs_processed = 0\n",
-    "\n",
-    "print(f\"Starting Volume-Weighted Consensus Clustering for {len(years)} years...\")\n",
-    "\n",
-    "# --- 2. ITERATE AND PROCESS ---\n",
-    "for year in years:\n",
-    "    # Find the graph in the dictionary\n",
-    "    target_key = next((k for k in recfilesproj.keys() if str(year) in str(k)), None)\n",
-    "    \n",
-    "    if target_key is None:\n",
-    "        continue\n",
-    "        \n",
-    "    G = recfilesproj[target_key]\n",
-    "    \n",
-    "    # [CHANGE 1] Use 'total_volume' for community detection\n",
-    "    # This ensures heavy recruiting pipelines dictate the communities\n",
-    "    try:\n",
-    "        partition = community_louvain.best_partition(G, weight='total_volume')\n",
-    "    except Exception as e:\n",
-    "        print(f\"  Skipping {year} (Error: {e})\")\n",
-    "        continue\n",
-    "\n",
-    "    # Group nodes by community\n",
-    "    comm_sets = {}\n",
-    "    for node, comm_id in partition.items():\n",
-    "        comm_sets.setdefault(comm_id, []).append(node)\n",
-    "    \n",
-    "    # Update Consensus Graph (Edge Weight = Frequency of Co-occurrence)\n",
-    "    for comm_nodes in comm_sets.values():\n",
-    "        for u, v in combinations(comm_nodes, 2):\n",
-    "            if consensus_G.has_edge(u, v):\n",
-    "                consensus_G[u][v]['weight'] += 1\n",
-    "            else:\n",
-    "                consensus_G.add_edge(u, v, weight=1)\n",
-    "                \n",
-    "    graphs_processed += 1\n",
-    "\n",
-    "print(f\"Processed {graphs_processed} years. Filtering for stability...\")\n",
-    "\n",
-    "# --- 3. FILTER CONSENSUS GRAPH ---\n",
-    "cutoff_weight = graphs_processed * stability_threshold\n",
-    "\n",
-    "edges_to_remove = [\n",
-    "    (u, v) for u, v, data in consensus_G.edges(data=True) \n",
-    "    if data['weight'] < cutoff_weight\n",
-    "]\n",
-    "consensus_G.remove_edges_from(edges_to_remove)\n",
-    "consensus_G.remove_nodes_from(list(nx.isolates(consensus_G)))\n",
-    "\n",
-    "# --- 4. FINAL PARTITION ---\n",
-    "final_partition = community_louvain.best_partition(consensus_G, weight='weight')\n",
-    "\n",
-    "# --- 5. VISUALIZATION WITH SMART LABELS ---\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "pos = nx.spring_layout(consensus_G, k=0.15, iterations=100, seed=42)\n",
-    "\n",
-    "# Colors\n",
-    "cmap = plt.get_cmap('tab20', max(final_partition.values()) + 1)\n",
-    "node_colors = [final_partition[n] for n in consensus_G.nodes()]\n",
-    "\n",
-    "# Draw Graph\n",
-    "nx.draw_networkx_edges(consensus_G, pos, alpha=0.1, edge_color='gray')\n",
-    "nx.draw_networkx_nodes(consensus_G, pos, node_size=120, cmap=cmap, node_color=node_colors)\n",
-    "\n",
-    "# [CHANGE 2] Smart Labeling\n",
-    "# Calculate node degrees to identify \"important\" schools\n",
-    "degrees = dict(consensus_G.degree())\n",
-    "import numpy as np\n",
-    "deg_values = list(degrees.values())\n",
-    "if deg_values:\n",
-    "    threshold_deg = np.percentile(deg_values, label_threshold_percentile)\n",
-    "else:\n",
-    "    threshold_deg = 0\n",
-    "\n",
-    "texts = []\n",
-    "for node, (x, y) in pos.items():\n",
-    "    # Only label important nodes to reduce initial clutter\n",
-    "    if degrees[node] >= threshold_deg:\n",
-    "        texts.append(plt.text(x, y, node, fontsize=9, fontweight='bold', \n",
-    "                              ha='center', va='center'))\n",
-    "\n",
-    "# use adjustText for non-overlapping labels\n",
-    "from adjustText import adjust_text\n",
-    "print(\"Applying smart label placement (this may take a moment)...\")\n",
-    "adjust_text(texts, \n",
-    "            arrowprops=dict(arrowstyle='-', color='gray', alpha=0.5),\n",
-    "            force_text=(0.5, 1.0)) # Increase force to push labels apart\n",
-    "\n",
-    "plt.title(f\"Average Recruiting Communities ({years[0]}-{years[-1]})\\nWeighted by Total Volume\", fontsize=20)\n",
-    "plt.axis('off')\n",
-    "#plt.savefig(r\"imgs\\rec\\netviz\\average_communities_totalvolume_allnames\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b1389582",
    "metadata": {},
    "outputs": [],
@@ -1926,24 +1802,62 @@
    "source": [
     "# ASSORTATIVITY\n",
     "\n",
-    "avgnd_accumulator = {}\n",
+    "# Accumulate (k, knn) pairs from all graphs\n",
+    "k_knn_map = {}  \n",
     "\n",
-    "# Collect scores from each graph\n",
     "for name, G in xferfiles.items():\n",
-    "    avg_nd_values = nx.average_neighbor_degree(G)\n",
-    "    for node, nd in avg_nd_values.items():\n",
-    "        avgnd_accumulator.setdefault(node, []).append(nd)\n",
+    "    # Calculate metrics for this specific graph snapshot\n",
+    "    knn_dict = nx.average_neighbor_degree(G) \n",
+    "    degree_dict = dict(G.degree())\n",
+    "    \n",
+    "    for node, k in degree_dict.items():\n",
+    "        if k > 0 and node in knn_dict:\n",
+    "            knn = knn_dict[node]\n",
+    "            k_knn_map.setdefault(k, []).append(knn)\n",
     "\n",
-    "# Compute average per school\n",
-    "avg_nd_values = np.array([np.mean(values) for values in avgnd_accumulator.values()])\n",
-    "avg_nd_values = avg_nd_values[avg_nd_values > 0] # cutting off 0 values so that the function works\n",
+    "# Binning: calculate the mean knn for each degree k\n",
+    "x_k = []\n",
+    "y_knn = []\n",
     "\n",
-    "# Call plotting function\n",
-    "fit_and_plot_best_distribution(avg_nd_values, title='Distribution of Average Neighbor Degree (Transfer Portal)', \n",
-    "                               ylabel=\"Probability\", color='navy', \n",
-    "                               savepath=f\".\\\\imgs\\\\xfer\\\\graphs\\\\assortativity_distribution.png\",\n",
-    "                               select=\"Gaussian\"\n",
-    "                               )"
+    "# Sort by degree so the line connects properly\n",
+    "for k in sorted(k_knn_map.keys()):\n",
+    "    if k > 0: # Log-log plots dislike 0\n",
+    "        vals = k_knn_map[k]\n",
+    "        x_k.append(k)\n",
+    "        y_knn.append(np.mean(vals))\n",
+    "\n",
+    "# Fitting\n",
+    "slope, intercept, r_value, p_value, std_err = linregress(np.log(x_k), np.log(y_knn))\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# Scatter of the binned means\n",
+    "plt.scatter(x_k, y_knn, color='navy', alpha=0.8, s=50, label='Observed Data (Binned)')\n",
+    "\n",
+    "# Trend line\n",
+    "x_fit = np.linspace(min(x_k), max(x_k), 100)\n",
+    "y_fit = np.exp(intercept + slope * np.log(x_fit)) # Transform back from log space\n",
+    "plt.plot(x_fit, y_fit, 'r--', linewidth=2, label=f'Trend (Slope: {slope:.2f})')\n",
+    "\n",
+    "# Formatting\n",
+    "plt.title(\"Degree Correlation: $k_{nn}$ vs $k$ (Transfer Portal)\", fontsize=14)\n",
+    "plt.xlabel(\"Node Degree ($k$)\", fontsize=12)\n",
+    "plt.ylabel(\"Avg. Neighbor Degree ($k_{nn}$)\", fontsize=12)\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')\n",
+    "\n",
+    "# Legend\n",
+    "legend_text = (\n",
+    "    f\"Slope: {slope:.2f}\\n\"\n",
+    "    f\"Correlation: {r_value:.2f}\"\n",
+    ")\n",
+    "leg = plt.legend(title=legend_text)\n",
+    "leg.set_alignment('left')\n",
+    "\n",
+    "# Save\n",
+    "plt.savefig(r\"imgs\\xfer\\graphs\\assortativity_distribution.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -2059,7 +1973,7 @@
     "\n",
     "# Collect scores from each graph\n",
     "for name, G in recfilesproj.items():\n",
-    "    avg_cc_values = nx.average_neighbor_degree(G)\n",
+    "    avg_cc_values = nx.clustering(G)\n",
     "    for node, cc in avg_cc_values.items():\n",
     "        cc_accumulator.setdefault(node, []).append(cc)\n",
     "\n",
@@ -2070,7 +1984,7 @@
     "# Call plotting function\n",
     "fit_and_plot_best_distribution(avg_cc_values, title='Distribution of Average Clustering Coefficient (Recruiting', \n",
     "                               ylabel=\"Probability\", color='gold', \n",
-    "                               savepath=f\".\\\\imgs\\\\xfer\\\\graphs\\\\clustering_distribution.png\",\n",
+    "                               savepath=f\".\\\\imgs\\\\rec\\\\graphs\\\\clustering_distribution.png\",\n",
     "                               select=\"Gaussian\"\n",
     "                               )"
    ]
@@ -2140,7 +2054,7 @@
     "# GENERATE NULL MODELS\n",
     "# ======================================================\n",
     "\n",
-    "NUM_NULLS = 100  \n",
+    "NUM_NULLS = 100\n",
     "SWAP_MULTIPLIER = 10 \n",
     "\n",
     "# --- Storage for recruiting\n",
@@ -2193,7 +2107,7 @@
     "y_real = np.arange(1, len(x_real)+1) / len(x_real)\n",
     "plt_bc.step(x_real, y_real, where='post', color='darkred', linewidth=2.5, label='Real Network')\n",
     "plt_bc.legend(loc='lower right')\n",
-    "plt_bc.savefig(r\"imgs\\nullcomp\\betweenness_ci.png\")\n",
+    "#plt_bc.savefig(r\"imgs\\nullcomp\\betweenness_ci.png\")\n",
     "plt_bc.show()\n",
     "\n",
     "# --- Clustering Coefficient ---\n",
@@ -2204,7 +2118,7 @@
     "y_clust = np.arange(1, len(x_clust)+1) / len(x_clust)\n",
     "plt_clust.step(x_clust, y_clust, where='post', color='teal', linewidth=2.5, label='Real Network')\n",
     "plt_clust.legend(loc='lower right')\n",
-    "plt_clust.savefig(r\"imgs\\nullcomp\\clustering_ci.png\")\n",
+    "#plt_clust.savefig(r\"imgs\\nullcomp\\clustering_ci.png\")\n",
     "plt_clust.show()\n",
     "\n",
     "# ======================================================\n",
@@ -2219,7 +2133,7 @@
     "y_pr = np.arange(1, len(x_pr)+1) / len(x_pr)\n",
     "plt_pr.step(x_pr, y_pr, where='post', color='mediumorchid', linewidth=2.5, label='Real Network')\n",
     "plt_pr.legend(loc='lower right')\n",
-    "plt_pr.savefig(r\"imgs\\nullcomp\\pagerank_ci.png\")\n",
+    "#plt_pr.savefig(r\"imgs\\nullcomp\\pagerank_ci.png\")\n",
     "plt_pr.show()\n",
     "\n",
     "# --- Assortativity (Avg Neighbor Degree) ---\n",
@@ -2232,12 +2146,12 @@
     "plt_assort.step(x_assort, y_assort, where='post', color='darkorange', linewidth=2.5, label='Real Network')\n",
     "plt_assort.legend(loc='lower right')\n",
     "plt_assort.xlim()\n",
-    "plt_assort.savefig(r\"imgs\\nullcomp\\assort_ci.png\")"
+    "#plt_assort.savefig(r\"imgs\\nullcomp\\assort_ci.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "365e45b5",
    "metadata": {},
    "outputs": [
@@ -2248,8 +2162,8 @@
       "KOLMOGOROV-SMIRNOV STATISTICAL VALIDATION:\n",
       "\n",
       "--- Recruiting: Betweenness Centrality ---\n",
-      "  KS Statistic: 0.0996 (Max difference between CDFs)\n",
-      "  P-Value:      8.1401e-02\n",
+      "  KS Statistic: 0.1050 (Max difference between CDFs)\n",
+      "  P-Value:      1.0079e-01\n",
       "  >> RESULT: FAIL TO REJECT Null Hypothesis.\n",
       "     The real distribution is statistically similar to the nulls.\n",
       "     Conclusion: Metric is purely a byproduct of degree.\n",
@@ -2257,8 +2171,8 @@
       "============================================================\n",
       "\n",
       "--- Recruiting: Clustering Coefficient ---\n",
-      "  KS Statistic: 0.5923 (Max difference between CDFs)\n",
-      "  P-Value:      2.2968e-53\n",
+      "  KS Statistic: 0.5950 (Max difference between CDFs)\n",
+      "  P-Value:      8.0932e-45\n",
       "  >> RESULT: REJECT Null Hypothesis.\n",
       "     The real distribution is STATISTICALLY DIFFERENT from the nulls.\n",
       "     Conclusion: Structure cannot be explained by degree alone.\n",
@@ -2266,8 +2180,8 @@
       "============================================================\n",
       "\n",
       "--- Transfer: PageRank ---\n",
-      "  KS Statistic: 0.0912 (Max difference between CDFs)\n",
-      "  P-Value:      2.1694e-03\n",
+      "  KS Statistic: 0.0995 (Max difference between CDFs)\n",
+      "  P-Value:      2.1850e-03\n",
       "  >> RESULT: REJECT Null Hypothesis.\n",
       "     The real distribution is STATISTICALLY DIFFERENT from the nulls.\n",
       "     Conclusion: Structure cannot be explained by degree alone.\n",
@@ -2275,8 +2189,8 @@
       "============================================================\n",
       "\n",
       "--- Transfer: Avg Neighbor Degree (Assortativity) ---\n",
-      "  KS Statistic: 0.1837 (Max difference between CDFs)\n",
-      "  P-Value:      1.8271e-12\n",
+      "  KS Statistic: 0.1844 (Max difference between CDFs)\n",
+      "  P-Value:      1.3049e-10\n",
       "  >> RESULT: REJECT Null Hypothesis.\n",
       "     The real distribution is STATISTICALLY DIFFERENT from the nulls.\n",
       "     Conclusion: Structure cannot be explained by degree alone.\n",
@@ -2486,6 +2400,116 @@
    "metadata": {},
    "source": [
     "RECRUITING ANALYSIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d7560d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COMMUNITIES\n",
+    "\n",
+    "# --- 1. CONFIGURATION ---\n",
+    "years = range(2002, 2027)\n",
+    "stability_threshold = 0.35  # Schools must be in same community _% of the time to keep link\n",
+    "label_threshold_percentile = 0  # Only label top _% of nodes by degree to reduce clutter\n",
+    "\n",
+    "# Initialize Consensus Graph\n",
+    "consensus_G = nx.Graph()\n",
+    "graphs_processed = 0\n",
+    "\n",
+    "print(f\"Starting Volume-Weighted Consensus Clustering for {len(years)} years...\")\n",
+    "\n",
+    "# --- 2. ITERATE AND PROCESS ---\n",
+    "for year in years:\n",
+    "    # Find the graph in the dictionary\n",
+    "    target_key = next((k for k in recfilesproj.keys() if str(year) in str(k)), None)\n",
+    "    \n",
+    "    if target_key is None:\n",
+    "        continue\n",
+    "        \n",
+    "    G = recfilesproj[target_key]\n",
+    "    \n",
+    "    # [CHANGE 1] Use 'total_volume' for community detection\n",
+    "    # This ensures heavy recruiting pipelines dictate the communities\n",
+    "    try:\n",
+    "        partition = community_louvain.best_partition(G, weight='total_volume')\n",
+    "    except Exception as e:\n",
+    "        print(f\"  Skipping {year} (Error: {e})\")\n",
+    "        continue\n",
+    "\n",
+    "    # Group nodes by community\n",
+    "    comm_sets = {}\n",
+    "    for node, comm_id in partition.items():\n",
+    "        comm_sets.setdefault(comm_id, []).append(node)\n",
+    "    \n",
+    "    # Update Consensus Graph (Edge Weight = Frequency of Co-occurrence)\n",
+    "    for comm_nodes in comm_sets.values():\n",
+    "        for u, v in combinations(comm_nodes, 2):\n",
+    "            if consensus_G.has_edge(u, v):\n",
+    "                consensus_G[u][v]['weight'] += 1\n",
+    "            else:\n",
+    "                consensus_G.add_edge(u, v, weight=1)\n",
+    "                \n",
+    "    graphs_processed += 1\n",
+    "\n",
+    "print(f\"Processed {graphs_processed} years. Filtering for stability...\")\n",
+    "\n",
+    "# --- 3. FILTER CONSENSUS GRAPH ---\n",
+    "cutoff_weight = graphs_processed * stability_threshold\n",
+    "\n",
+    "edges_to_remove = [\n",
+    "    (u, v) for u, v, data in consensus_G.edges(data=True) \n",
+    "    if data['weight'] < cutoff_weight\n",
+    "]\n",
+    "consensus_G.remove_edges_from(edges_to_remove)\n",
+    "consensus_G.remove_nodes_from(list(nx.isolates(consensus_G)))\n",
+    "\n",
+    "# --- 4. FINAL PARTITION ---\n",
+    "final_partition = community_louvain.best_partition(consensus_G, weight='weight')\n",
+    "\n",
+    "# --- 5. VISUALIZATION WITH SMART LABELS ---\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "pos = nx.spring_layout(consensus_G, k=0.15, iterations=100, seed=42)\n",
+    "\n",
+    "# Colors\n",
+    "cmap = plt.get_cmap('tab20', max(final_partition.values()) + 1)\n",
+    "node_colors = [final_partition[n] for n in consensus_G.nodes()]\n",
+    "\n",
+    "# Draw Graph\n",
+    "nx.draw_networkx_edges(consensus_G, pos, alpha=0.1, edge_color='gray')\n",
+    "nx.draw_networkx_nodes(consensus_G, pos, node_size=120, cmap=cmap, node_color=node_colors)\n",
+    "\n",
+    "# [CHANGE 2] Smart Labeling\n",
+    "# Calculate node degrees to identify \"important\" schools\n",
+    "degrees = dict(consensus_G.degree())\n",
+    "import numpy as np\n",
+    "deg_values = list(degrees.values())\n",
+    "if deg_values:\n",
+    "    threshold_deg = np.percentile(deg_values, label_threshold_percentile)\n",
+    "else:\n",
+    "    threshold_deg = 0\n",
+    "\n",
+    "texts = []\n",
+    "for node, (x, y) in pos.items():\n",
+    "    # Only label important nodes to reduce initial clutter\n",
+    "    if degrees[node] >= threshold_deg:\n",
+    "        texts.append(plt.text(x, y, node, fontsize=9, fontweight='bold', \n",
+    "                              ha='center', va='center'))\n",
+    "\n",
+    "# use adjustText for non-overlapping labels\n",
+    "from adjustText import adjust_text\n",
+    "print(\"Applying smart label placement (this may take a moment)...\")\n",
+    "adjust_text(texts, \n",
+    "            arrowprops=dict(arrowstyle='-', color='gray', alpha=0.5),\n",
+    "            force_text=(0.5, 1.0)) # Increase force to push labels apart\n",
+    "\n",
+    "plt.title(f\"Average Recruiting Communities ({years[0]}-{years[-1]})\\nWeighted by Total Volume\", fontsize=20)\n",
+    "plt.axis('off')\n",
+    "#plt.savefig(r\"imgs\\rec\\netviz\\average_communities_totalvolume_allnames\")\n",
+    "plt.show()"
    ]
   },
   {
