actual final commit of coursework

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "365e45b5",
    "metadata": {},
    "outputs": [
@@ -2162,7 +2162,7 @@
       "KOLMOGOROV-SMIRNOV STATISTICAL VALIDATION:\n",
       "\n",
       "--- Recruiting: Betweenness Centrality ---\n",
-      "  KS Statistic: 0.1050 (Max difference between CDFs)\n",
+      "  KS Statistic: 0.1050\n",
       "  P-Value:      1.0079e-01\n",
       "  >> RESULT: FAIL TO REJECT Null Hypothesis.\n",
       "     The real distribution is statistically similar to the nulls.\n",
@@ -2171,7 +2171,7 @@
       "============================================================\n",
       "\n",
       "--- Recruiting: Clustering Coefficient ---\n",
-      "  KS Statistic: 0.5950 (Max difference between CDFs)\n",
+      "  KS Statistic: 0.5950\n",
       "  P-Value:      8.0932e-45\n",
       "  >> RESULT: REJECT Null Hypothesis.\n",
       "     The real distribution is STATISTICALLY DIFFERENT from the nulls.\n",
@@ -2180,7 +2180,7 @@
       "============================================================\n",
       "\n",
       "--- Transfer: PageRank ---\n",
-      "  KS Statistic: 0.0995 (Max difference between CDFs)\n",
+      "  KS Statistic: 0.0995\n",
       "  P-Value:      2.1850e-03\n",
       "  >> RESULT: REJECT Null Hypothesis.\n",
       "     The real distribution is STATISTICALLY DIFFERENT from the nulls.\n",
@@ -2189,7 +2189,7 @@
       "============================================================\n",
       "\n",
       "--- Transfer: Avg Neighbor Degree (Assortativity) ---\n",
-      "  KS Statistic: 0.1844 (Max difference between CDFs)\n",
+      "  KS Statistic: 0.1844\n",
       "  P-Value:      1.3049e-10\n",
       "  >> RESULT: REJECT Null Hypothesis.\n",
       "     The real distribution is STATISTICALLY DIFFERENT from the nulls.\n",
@@ -2216,8 +2216,8 @@
     "\n",
     "    # Print results\n",
     "    print(f\"--- {label} ---\")\n",
-    "    print(f\"  KS Statistic: {statistic:.4f} (Max difference between CDFs)\")\n",
-    "    print(f\"  P-Value:      {p_value:.4e}\") # Scientific notation for very small numbers\n",
+    "    print(f\"  KS Statistic: {statistic:.4f}\")\n",
+    "    print(f\"  P-Value:      {p_value:.4e}\") \n",
     "\n",
     "    # 4. Interpretation logic\n",
     "    alpha = 0.01 # Significance level 1%\n",
